<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>burp.vaycore</groupId>
    <artifactId>onescan</artifactId>
    <packaging>pom</packaging>
    <version>parent</version>

    <modules>
        <module>montoya-api</module>
        <module>burp-extender-api</module>
        <module>extender</module>
    </modules>

    <properties>
        <jdk.version>21</jdk.version>
        <java.version>${jdk.version}</java.version>
        <maven.compiler.release>${jdk.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <burp-extender-api.version>2.3</burp-extender-api.version>
        <montoya-api.version>2023.12.1</montoya-api.version>
        <gson.version>2.10.1</gson.version>
        <sqlite-jdbc.version>3.49.1.0</sqlite-jdbc.version>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.portswigger.burp.extender</groupId>
                <artifactId>burp-extender-api</artifactId>
                <version>${burp-extender-api.version}</version>
            </dependency>
            <dependency>
                <groupId>net.portswigger.burp.extensions</groupId>
                <artifactId>montoya-api</artifactId>
                <version>${montoya-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite-jdbc.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
